--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -6,12 +6,14 @@
     android:orientation="vertical"
     tools:context=".LogIn">
 
+
     <ImageView
         android:layout_width="199dp"
         android:layout_height="200dp"
         android:layout_gravity="center"
         android:layout_marginTop="80dp"
-        android:src="@drawable/logo" />
+        android:src="@drawable/logo"
+        />
 
     <EditText
         android:id="@+id/edtEmail"
