--- a/app/src/main/res/layout/accomdation_cardview.xml
+++ b/app/src/main/res/layout/accomdation_cardview.xml
@@ -6,13 +6,13 @@
     android:backgroundTint="@color/white"
     android:id="@+id/accomdation_cardView"
     >
-    
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
-        
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -25,8 +25,10 @@
             android:layout_height="wrap_content"
             android:textSize="20dp"
             android:layout_marginBottom="5dp"
-            android:layout_gravity="left"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:id="@+id/priceTxt"
+            android:textColor="#FF0000"
             />
         <TextView
             android:layout_width="match_parent"
@@ -34,7 +36,9 @@
             android:textSize="20dp"
             android:layout_marginBottom="5dp"
             android:layout_gravity="center"
+            android:gravity="center"
             android:id="@+id/roomName"
+            android:textColor="@color/black"
             />
         <TextView
             android:layout_width="match_parent"
@@ -42,7 +46,9 @@
             android:textSize="20dp"
             android:layout_marginBottom="5dp"
             android:layout_gravity="center"
+            android:gravity="center"
             android:id="@+id/numPerson"
+            android:textColor="@color/black"
             />
 
     </LinearLayout>
