--- a/app/src/main/res/layout/activity_show_details.xml
+++ b/app/src/main/res/layout/activity_show_details.xml
@@ -35,6 +35,7 @@
         android:text="TextView"
         android:textSize="20sp"
         android:layout_margin="10dp"
+        android:textColor="@color/black"
         />
 
     <TextView
@@ -46,16 +47,25 @@
         />
 
 
-    <TextView
-        android:id="@+id/textDescription"
+    <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textSize="18sp"
+        android:layout_height="200dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="7dp"
-        />
+        android:padding="5dp"
+        >
 
+        <TextView
+            android:id="@+id/textDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textSize="18sp"
+            android:layout_marginTop="7dp"
+            android:scrollbars="vertical"
+            android:padding="4dp"
+            />
+
+    </ScrollView>
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
