--- a/app/src/main/res/layout/activity_show_details.xml
+++ b/app/src/main/res/layout/activity_show_details.xml
@@ -44,6 +44,7 @@
         android:text="Information"
         android:textSize="24sp"
         android:layout_margin="10dp"
+        android:textColor="@color/black"
         />
 
 
