--- a/app/src/main/res/layout/facilites_cardview.xml
+++ b/app/src/main/res/layout/facilites_cardview.xml
@@ -4,7 +4,7 @@
     android:layout_height="250dp"
     android:layout_margin="10dp"
     android:backgroundTint="@color/white"
-    android:id="@+id/services_cardView"
+    android:id="@+id/facilitesCardView"
     >
 
     <LinearLayout
@@ -18,7 +18,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:layout_margin="9dp"
-            android:id="@+id/serviceImage"
+            android:id="@+id/facilitesImage"
             />
 
         <TextView
@@ -28,7 +28,7 @@
             android:layout_marginBottom="5dp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:id="@+id/txtServicesName"
+            android:id="@+id/txtFacilitesName"
             android:textColor="#FF0000"
             />
 
@@ -39,7 +39,7 @@
             android:layout_marginTop="5dp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:id="@+id/txtServicesDes"
+            android:id="@+id/txtFacilitesDes"
             android:textColor="@color/white"
             />
 
