--- a/app/src/main/res/layout/services_cardview.xml
+++ b/app/src/main/res/layout/services_cardview.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
-    android:layout_margin="10dp"
-    android:backgroundTint="@color/white"
+    android:layout_height="175dp"
+    android:layout_margin="25dp"
+    android:backgroundTint="#8FA590"
     android:id="@+id/services_cardView"
     >
 
@@ -29,18 +29,7 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:id="@+id/txtServicesName"
-            android:textColor="#FF0000"
-            />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:layout_marginTop="5dp"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:id="@+id/txtServicesDes"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             />
 
     </LinearLayout>
