--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -10,6 +10,6 @@
         android:icon="@drawable/home"/>
     <item
         android:id="@+id/settings"
-        android:title="Settings"
-        android:icon="@drawable/sett"/>
+        android:title="Log out"
+        android:icon="@drawable/logout"/>
 </menu>
