--- a/app/src/main/res/drawable/button_cust_mainpage.xml
+++ b/app/src/main/res/drawable/button_cust_mainpage.xml
@@ -1,15 +1,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <gradient
-        android:startColor="#282858"
-        android:centerColor="#031B22"
-        android:endColor="#7171BD"
-        android:angle="90"/>
-    <padding android:left="7dp"
-        android:top="7dp"
-        android:right="7dp"
-        android:bottom="7dp" />
+    <solid android:color="#D7E1E0D6" />
+
     <stroke
-        android:width="2dip"
-        android:color="#FFFFFF" />
-    <corners android:radius= "55dp" />
+        android:width="1dp"
+        android:color="#2f6699" />
+    <corners
+        android:radius="35dp"
+        />
 </shape>
