--- a/app/src/main/res/layout/activity_services_view.xml
+++ b/app/src/main/res/layout/activity_services_view.xml
@@ -3,49 +3,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="15dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="#7FADC1"
     tools:context=".ServicesActivity">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/getImageSer"
+        android:layout_width="267dp"
+        android:layout_height="144dp"
         android:layout_gravity="center"
         android:layout_margin="20dp"
-        android:layout_marginTop="20dp"
-        app:srcCompat="@mipmap/ic_launcher"
-        />
+        app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/getNameSer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="30dp"
         android:text="Title"
-        android:layout_margin="20dp"
-        android:layout_gravity="center"
+        android:textAlignment="center"
         android:textColor="#DA0F0F"
-        android:textSize="30sp" />
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:textSize="18sp" />
+
+
+    <TextView
+        android:id="@+id/getDecSer"
+        android:layout_width="324dp"
+        android:layout_height="193dp"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:layout_margin="20dp">
-        <TextView
-            android:id="@+id/getDecSer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="30dp"
-            android:text="Title"
-            android:layout_gravity="center"
-            android:textColor="#DA0F0F"
-            android:textSize="30sp" />
-    </ScrollView>
-
+        android:layout_marginBottom="30dp"
+        android:padding="4dp"
+        android:text="Title"
+        android:textColor="#000000"
+        android:textSize="14sp" />
 
 
 </LinearLayout>
