--- a/app/src/main/res/layout/activity_services_view.xml
+++ b/app/src/main/res/layout/activity_services_view.xml
@@ -27,8 +27,8 @@
         android:layout_marginBottom="30dp"
         android:text="Title"
         android:textAlignment="center"
-        android:textColor="#DA0F0F"
-        android:textSize="18sp" />
+        android:textColor="@color/white"
+        android:textSize="30dp" />
 
 
     <TextView
@@ -41,7 +41,7 @@
         android:padding="4dp"
         android:text="Title"
         android:textColor="#000000"
-        android:textSize="14sp" />
+        android:textSize="25dp" />
 
 
 </LinearLayout>
