--- a/app/src/main/res/layout/activity_facilites_view.xml
+++ b/app/src/main/res/layout/activity_facilites_view.xml
@@ -43,5 +43,13 @@
         android:textColor="#000000"
         android:textSize="25dp" />
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="450dp"
+        android:layout_height="75dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="125dp"
+        app:menu="@menu/bottom_nav_menu" />
+
 
 </LinearLayout>
