--- a/app/src/main/res/layout/activity_hotel_detals.xml
+++ b/app/src/main/res/layout/activity_hotel_detals.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="#2D7D87"
     tools:context=".HotelDetals">
@@ -33,4 +34,13 @@
         android:textSize="25dp"
         android:textColor="@color/black"
         android:layout_marginTop="15dp"/>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="450dp"
+        android:layout_height="75dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="247dp"
+        app:menu="@menu/bottom_nav_menu" />
+
 </LinearLayout>
