--- a/app/src/main/res/layout/activity_list_view_hotel.xml
+++ b/app/src/main/res/layout/activity_list_view_hotel.xml
@@ -23,7 +23,13 @@
         android:id="@+id/lists"
         android:entries="@array/optian" />
 
-
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="450dp"
+        android:layout_height="75dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="125dp"
+        app:menu="@menu/bottom_nav_menu" />
 
 </LinearLayout>
 
