--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -40,21 +40,22 @@
         android:hint="Email"
         android:textColor="@color/black"
         android:textColorHint="@color/white" />
+
     <Button
+        android:id="@+id/btUpdaet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btUpdaet"
         android:layout_gravity="center"
-        android:text="Updeat"
-        android:textSize="25dp"
-        android:layout_marginTop="60dp"/>
+        android:layout_marginTop="60dp"
+        android:text="@string/Updeat"
+        android:textSize="25dp" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="75dp"
         android:layout_gravity="bottom"
-        android:layout_marginTop="152dp"
+        android:layout_marginTop="200dp"
         app:menu="@menu/bottom_nav_menu"/>
 
 </LinearLayout>
