--- a/app/src/main/res/layout/activity_show_details.xml
+++ b/app/src/main/res/layout/activity_show_details.xml
@@ -67,14 +67,14 @@
             />
 
     </ScrollView>
+
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Reserve"
         android:layout_gravity="center"
         android:layout_marginTop="17dp"
-        />
+        android:text="@string/Reserve" />
 
 
 
