--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -73,7 +73,7 @@
         android:layout_height="48dp"
         android:layout_gravity="center"
         android:background="@drawable/button_start"
-        android:text="Sign Up"
+        android:text="@string/sign_up"
         android:textSize="20dp"
         />
 
